--- a/test.css
+++ b/test.css
@@ -130,10 +130,12 @@ background-color: black;
 margin-top: 0px;
 }
 .search{
+    width: 100%;
     margin-left: 10px;
     margin-top: 10px;
 height: 70px;
-width: 600px;
+max-width: 600px;
+min-width: 250px;
 border-radius: 5px;
 padding: 10px;
 font-family: Arial, Helvetica, sans-serif;
