--- a/test.css
+++ b/test.css
@@ -6,6 +6,9 @@
         
         .centerpart{
             text-align: center;
+            
+            
+            justify-content: center;
             margin-top: 0px;
             background-color: #dadbf1;
             height: 400px;
@@ -130,12 +133,14 @@ background-color: black;
 margin-top: 0px;
 }
 .search{
+    
+    
     width: 100%;
     margin-left: 10px;
     margin-top: 10px;
 height: 70px;
-max-width: 600px;
-min-width: 250px;
+max-width: 620px;
+min-width: 230px;
 border-radius: 5px;
 padding: 10px;
 font-family: Arial, Helvetica, sans-serif;
@@ -151,7 +156,8 @@ font-size: 30px;
 
 .card {
     margin-top: 50px;
-    margin-left: 50px;
+    margin-left: 40px;
+    margin-right:30px ;
     margin-bottom: 20px;
     background: white;
     padding: 20px;
@@ -286,4 +292,9 @@ footer {
     text-align: center;
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+@media (max-width:600px){
+    .search input{
+        width:80%
+    }
 }
